@@ -1,10 +1,15 @@
+2006-11-07  Rick Moseley  <rmoseley@redhat.com>
+
+	* DOMFrysk.java: Correct docs at top of file.  Add recent
+	addition to DOMSource of include paths.
+
 2006-11-06  Rick Moseley  <rmoseley@redhat.com>
 
 	* DOMSource.java: Added getIncludes method.
 	* cparser/CDTParser.java: Use getIncludes method.
 	Add countCommas/getIncPaths methods.
 
-2006-11-04  Rick Moseley  <rmoseley@redhat.com>
+2006-11-03  Rick Moseley  <rmoseley@redhat.com>
 
 	* DOMImage.java: Added capability to add multiple source files to
 	the DOM.
